--- a/README.Rmd
+++ b/README.Rmd
@@ -24,20 +24,20 @@ Student_RPT_05是現時台灣各大專院校外藉學生資料包括人數國藉
 ```{r}
 #這是R Code Chunk
 library(readr)
-File_1940 <- read_csv("~/CGUIM_BigData_FinalReport-B0344122/File_1940.csv", skip = 3)
+File_1940 <- read_csv("C:/CGUIM_BigData_FinalReport-B0344122/File_1940.csv", skip = 3)
 
-visitorstatictis1 <- read_csv("~/CGUIM_BigData_FinalReport-B0344122/visitorstatictis1.csv")
+visitorstatictis1 <- read_csv("C:/CGUIM_BigData_FinalReport-B0344122/visitorstatictis1.csv")
 
-Student_RPT_05 <- read_csv("~/CGUIM_BigData_FinalReport-B0344122/Student_RPT_05.csv")
+Student_RPT_05 <- read_csv("C:/CGUIM_BigData_FinalReport-B0344122/Student_RPT_05.csv")
 
-X104oversea_B1_1a <- read_csv("~/CGUIM_BigData_FinalReport-B0344122/104oversea_B1-1a.csv")
+X104oversea_B1_1a <- read_csv("C:/CGUIM_BigData_FinalReport-B0344122/104oversea_B1-1a.csv")
 ```
 
 
 ## 資料處理與清洗
 ```{r}
-
 #資料清洗
+
 #File_1940清洗
 names(File_1940)[1] <-"學年度"
 names(File_1940)[2] <-"總計"
@@ -64,240 +64,248 @@ Student_RPT_05$X1 <- NULL
 Student_RPT_05 <- Student_RPT_05[-1,]
 Student_RPT_05 <- Student_RPT_05[-1,]
 Student_RPT_05 <- Student_RPT_05[-1,]
-names(Student_RPT_05)[1] <-"學年度"
-names(Student_RPT_05)[2] <-"設立別"
+names(Student_RPT_05)[1] <-"year"
+names(Student_RPT_05)[2] <-"typeofschool"
 names(Student_RPT_05)[3] <-"學校類別"
 names(Student_RPT_05)[4] <-"學校代碼"
-names(Student_RPT_05)[5] <-"學校名稱"
+names(Student_RPT_05)[5] <-"schoolname"
 names(Student_RPT_05)[6] <-"系所代碼"
-names(Student_RPT_05)[7] <-"系所名稱"
-names(Student_RPT_05)[8] <-"學制"
-names(Student_RPT_05)[9] <-"僑生總計"
-names(Student_RPT_05)[10] <-"僑生男"
-names(Student_RPT_05)[11] <-"僑生女"
-names(Student_RPT_05)[12] <-"港澳生總計"
-names(Student_RPT_05)[13] <-"港澳生男"
-names(Student_RPT_05)[14] <-"港澳生女"
+names(Student_RPT_05)[7] <-"Major"
+names(Student_RPT_05)[8] <-"class"
+names(Student_RPT_05)[9] <-"overseastudentcount"
+names(Student_RPT_05)[10] <-"overseaMstudentcount"
+names(Student_RPT_05)[11] <-"overseaFstudentcount"
+names(Student_RPT_05)[12] <-"HKMacaustudentcount"
+names(Student_RPT_05)[13] <-"HKMacauMstudentcount"
+names(Student_RPT_05)[14] <-"HKMacauFstudentcount"
+
+student101data<-Student_RPT_05[grepl("101",Student_RPT_05$"學年度"),]
+student102data<-Student_RPT_05[grepl("102",Student_RPT_05$"學年度"),]
+student103data<-Student_RPT_05[grepl("103",Student_RPT_05$"學年度"),]
+student104data<-Student_RPT_05[grepl("104",Student_RPT_05$"學年度"),]
+student105data<-Student_RPT_05[grepl("105",Student_RPT_05$"學年度"),]
 
 #X104oversea_B1_1a清洗
-X104oversea_B1_1a$locationy[X104oversea_B1_1a$"僑居地" == c("馬來西亞")] <- "3.137956"
-X104oversea_B1_1a$locationx[X104oversea_B1_1a$"僑居地" == c("馬來西亞")] <- "101.687132"
+names(X104oversea_B1_1a)[2] <-"school"
+names(X104oversea_B1_1a)[4] <-"country"
+X104oversea_B1_1a$locationy[X104oversea_B1_1a$"country" == c("馬來西亞")] <- "3.137956"
+X104oversea_B1_1a$locationx[X104oversea_B1_1a$"country" == c("馬來西亞")] <- "101.687132"
 
-X104oversea_B1_1a$locationy[X104oversea_B1_1a$"僑居地" == c("南非")] <- "-30.909670"
-X104oversea_B1_1a$locationx[X104oversea_B1_1a$"僑居地" == c("南非")] <- "24.259127"
+X104oversea_B1_1a$locationy[X104oversea_B1_1a$"country" == c("南非")] <- "-30.909670"
+X104oversea_B1_1a$locationx[X104oversea_B1_1a$"country" == c("南非")] <- "24.259127"
 
-X104oversea_B1_1a$locationy[X104oversea_B1_1a$"僑居地" == c("加拿大")] <- "59.997026"
-X104oversea_B1_1a$locationx[X104oversea_B1_1a$"僑居地" == c("加拿大")] <- "-112.402012"
+X104oversea_B1_1a$locationy[X104oversea_B1_1a$"country" == c("加拿大")] <- "59.997026"
+X104oversea_B1_1a$locationx[X104oversea_B1_1a$"country" == c("加拿大")] <- "-112.402012"
 
-X104oversea_B1_1a$locationy[X104oversea_B1_1a$"僑居地" == c("緬甸")] <- "21.415178"
-X104oversea_B1_1a$locationx[X104oversea_B1_1a$"僑居地" == c("緬甸")] <- "96.396717"
+X104oversea_B1_1a$locationy[X104oversea_B1_1a$"country" == c("緬甸")] <- "21.415178"
+X104oversea_B1_1a$locationx[X104oversea_B1_1a$"country" == c("緬甸")] <- "96.396717"
 
-X104oversea_B1_1a$locationy[X104oversea_B1_1a$"僑居地" == c("印尼")] <- "-4.381767"
-X104oversea_B1_1a$locationx[X104oversea_B1_1a$"僑居地" == c("印尼")] <- "122.293216"
+X104oversea_B1_1a$locationy[X104oversea_B1_1a$"country" == c("印尼")] <- "-4.381767"
+X104oversea_B1_1a$locationx[X104oversea_B1_1a$"country" == c("印尼")] <- "122.293216"
 
-X104oversea_B1_1a$locationy[X104oversea_B1_1a$"僑居地" == c("日本")] <- "36.552849"
-X104oversea_B1_1a$locationx[X104oversea_B1_1a$"僑居地" == c("日本")] <- "138.307262"
+X104oversea_B1_1a$locationy[X104oversea_B1_1a$"country" == c("日本")] <- "36.552849"
+X104oversea_B1_1a$locationx[X104oversea_B1_1a$"country" == c("日本")] <- "138.307262"
 
-X104oversea_B1_1a$locationy[X104oversea_B1_1a$"僑居地" == c("菲律賓")] <- "14.598987"
-X104oversea_B1_1a$locationx[X104oversea_B1_1a$"僑居地" == c("菲律賓")] <- "120.983238"
+X104oversea_B1_1a$locationy[X104oversea_B1_1a$"country" == c("菲律賓")] <- "14.598987"
+X104oversea_B1_1a$locationx[X104oversea_B1_1a$"country" == c("菲律賓")] <- "120.983238"
 
-X104oversea_B1_1a$locationy[X104oversea_B1_1a$"僑居地" == c("新加坡")] <- "1.360033"
-X104oversea_B1_1a$locationx[X104oversea_B1_1a$"僑居地" == c("新加坡")] <- "103.868979"
+X104oversea_B1_1a$locationy[X104oversea_B1_1a$"country" == c("新加坡")] <- "1.360033"
+X104oversea_B1_1a$locationx[X104oversea_B1_1a$"country" == c("新加坡")] <- "103.868979"
 
-X104oversea_B1_1a$locationy[X104oversea_B1_1a$"僑居地" == c("泰國")] <- "13.748660"
-X104oversea_B1_1a$locationx[X104oversea_B1_1a$"僑居地" == c("泰國")] <- "100.492952"
-    
-X104oversea_B1_1a$locationy[X104oversea_B1_1a$"僑居地" == c("英國")] <- "54.938086"
-X104oversea_B1_1a$locationx[X104oversea_B1_1a$"僑居地" == c("英國")] <- "-2.867684"
-  
-X104oversea_B1_1a$locationy[X104oversea_B1_1a$"僑居地" == c("美國")] <- "39.739020"
-X104oversea_B1_1a$locationx[X104oversea_B1_1a$"僑居地" == c("美國")] <- "-101.620433"
-    
-X104oversea_B1_1a$locationy[X104oversea_B1_1a$"僑居地" == c("阿根廷")] <- "-35.388441"
-X104oversea_B1_1a$locationx[X104oversea_B1_1a$"僑居地" == c("阿根廷")] <- "-65.392241"
+X104oversea_B1_1a$locationy[X104oversea_B1_1a$"country" == c("泰國")] <- "13.748660"
+X104oversea_B1_1a$locationx[X104oversea_B1_1a$"country" == c("泰國")] <- "100.492952"
 
-X104oversea_B1_1a$locationy[X104oversea_B1_1a$"僑居地" == c("南韓")] <- "37.592579"
-X104oversea_B1_1a$locationx[X104oversea_B1_1a$"僑居地" == c("南韓")] <- "126.975279"
+X104oversea_B1_1a$locationy[X104oversea_B1_1a$"country" == c("英國")] <- "54.938086"
+X104oversea_B1_1a$locationx[X104oversea_B1_1a$"country" == c("英國")] <- "-2.867684"
 
-X104oversea_B1_1a$locationy[X104oversea_B1_1a$"僑居地" == c("紐西蘭")] <- "-41.299974"
-X104oversea_B1_1a$locationx[X104oversea_B1_1a$"僑居地" == c("紐西蘭")] <- "174.776852"
-  
-X104oversea_B1_1a$locationy[X104oversea_B1_1a$"僑居地" == c("墨西哥")] <- "24.129376"
-X104oversea_B1_1a$locationx[X104oversea_B1_1a$"僑居地" == c("墨西哥")] <- "-102.917429"
-  
-X104oversea_B1_1a$locationy[X104oversea_B1_1a$"僑居地" == c("巴西")] <- "-8.884431"
-X104oversea_B1_1a$locationx[X104oversea_B1_1a$"僑居地" == c("巴西")] <- "-55.488347"
-  
-X104oversea_B1_1a$locationy[X104oversea_B1_1a$"僑居地" == c("巴拉圭")] <- "-23.269402"
-X104oversea_B1_1a$locationx[X104oversea_B1_1a$"僑居地" == c("巴拉圭")] <- "-58.462776"
-  
-X104oversea_B1_1a$locationy[X104oversea_B1_1a$"僑居地" == c("越南")] <- "14.484540"
-X104oversea_B1_1a$locationx[X104oversea_B1_1a$"僑居地" == c("越南")] <- "108.360975"
-  
-X104oversea_B1_1a$locationy[X104oversea_B1_1a$"僑居地" == c("肯亞")] <- "0.418065"
-X104oversea_B1_1a$locationx[X104oversea_B1_1a$"僑居地" == c("肯亞")] <- "37.868307"
-  
-X104oversea_B1_1a$locationy[X104oversea_B1_1a$"僑居地" == c("西班牙")] <- "39.690189"
-X104oversea_B1_1a$locationx[X104oversea_B1_1a$"僑居地" == c("西班牙")] <- "-3.132226"
-  
-X104oversea_B1_1a$locationy[X104oversea_B1_1a$"僑居地" == c("尼加拉瓜")] <- "12.891754"
-X104oversea_B1_1a$locationx[X104oversea_B1_1a$"僑居地" == c("尼加拉瓜")] <- "-85.188938"
-  
-X104oversea_B1_1a$locationy[X104oversea_B1_1a$"僑居地" == c("巴拿馬")] <- "8.484368"
-X104oversea_B1_1a$locationx[X104oversea_B1_1a$"僑居地" == c("巴拿馬")] <- "-80.109248"
-  
-X104oversea_B1_1a$locationy[X104oversea_B1_1a$"僑居地" == c("澳大利亞")] <- "-24.551857"
-X104oversea_B1_1a$locationx[X104oversea_B1_1a$"僑居地" == c("澳大利亞")] <- "134.182865"
-  
-X104oversea_B1_1a$locationy[X104oversea_B1_1a$"僑居地" == c("貝里斯")] <- "16.77919"
-X104oversea_B1_1a$locationx[X104oversea_B1_1a$"僑居地" == c("貝里斯")] <- "-88.737792"
-  
-X104oversea_B1_1a$locationy[X104oversea_B1_1a$"僑居地" == c("智利")] <- "-26.554819"
-X104oversea_B1_1a$locationx[X104oversea_B1_1a$"僑居地" == c("智利")] <- "-70.418818"
-  
-X104oversea_B1_1a$locationy[X104oversea_B1_1a$"僑居地" == c("薩爾瓦多")] <- "13.784449"
-X104oversea_B1_1a$locationx[X104oversea_B1_1a$"僑居地" == c("薩爾瓦多")] <- "-89.230311"
-  
-X104oversea_B1_1a$locationy[X104oversea_B1_1a$"僑居地" == c("哥斯大黎加")] <- "9.948630"
-X104oversea_B1_1a$locationx[X104oversea_B1_1a$"僑居地" == c("哥斯大黎加")] <- "-84.117774"
-  
-X104oversea_B1_1a$locationy[X104oversea_B1_1a$"僑居地" == c("法國")] <- "46.410759"
-X104oversea_B1_1a$locationx[X104oversea_B1_1a$"僑居地" == c("法國")] <- "2.716875"
-  
-X104oversea_B1_1a$locationy[X104oversea_B1_1a$"僑居地" == c("阿拉伯聯合大公國")] <- "23.681736"
-X104oversea_B1_1a$locationx[X104oversea_B1_1a$"僑居地" == c("阿拉伯聯合大公國")] <- "54.002147"
-  
-X104oversea_B1_1a$locationy[X104oversea_B1_1a$"僑居地" == c("葉門")] <- "15.846800"
-X104oversea_B1_1a$locationx[X104oversea_B1_1a$"僑居地" == c("葉門")] <- "47.850653"
-  
-X104oversea_B1_1a$locationy[X104oversea_B1_1a$"僑居地" == c("俄羅斯")] <- "62.240122"
-X104oversea_B1_1a$locationx[X104oversea_B1_1a$"僑居地" == c("俄羅斯")] <- "93.834839"
-  
-X104oversea_B1_1a$locationy[X104oversea_B1_1a$"僑居地" == c("斐濟")] <- "-17.847725"
-X104oversea_B1_1a$locationx[X104oversea_B1_1a$"僑居地" == c("斐濟")] <- "178.013273"
-  
-X104oversea_B1_1a$locationy[X104oversea_B1_1a$"僑居地" == c("厄瓜多")] <- "-1.418160"
-X104oversea_B1_1a$locationx[X104oversea_B1_1a$"僑居地" == c("厄瓜多")] <- "-78.294611"
-  
-X104oversea_B1_1a$locationy[X104oversea_B1_1a$"僑居地" == c("埃及")] <- "26.528769"
-X104oversea_B1_1a$locationx[X104oversea_B1_1a$"僑居地" == c("埃及")] <- "29.858624"
-  
-X104oversea_B1_1a$locationy[X104oversea_B1_1a$"僑居地" == c("巴布亞紐幾內亞")] <- "-6.441940"
-X104oversea_B1_1a$locationx[X104oversea_B1_1a$"僑居地" == c("巴布亞紐幾內亞")] <- "144.595518"
-  
-X104oversea_B1_1a$locationy[X104oversea_B1_1a$"僑居地" == c("巴基斯坦")] <- "30.082631"
-X104oversea_B1_1a$locationx[X104oversea_B1_1a$"僑居地" == c("巴基斯坦")] <- "69.294945"
-  
-X104oversea_B1_1a$locationy[X104oversea_B1_1a$"僑居地" == c("巴林")] <- "26.038782"
-X104oversea_B1_1a$locationx[X104oversea_B1_1a$"僑居地" == c("巴林")] <- "50.552011"
-  
-X104oversea_B1_1a$locationy[X104oversea_B1_1a$"僑居地" == c("比利時")] <- "50.906237"
-X104oversea_B1_1a$locationx[X104oversea_B1_1a$"僑居地" == c("比利時")] <- "4.338898"
-  
-X104oversea_B1_1a$locationy[X104oversea_B1_1a$"僑居地" == c("玻利維亞")] <- "-16.597679"
-X104oversea_B1_1a$locationx[X104oversea_B1_1a$"僑居地" == c("玻利維亞")] <- "-64.640097"
-  
-X104oversea_B1_1a$locationy[X104oversea_B1_1a$"僑居地" == c("帛琉")] <- "7.517417"
-X104oversea_B1_1a$locationx[X104oversea_B1_1a$"僑居地" == c("帛琉")] <- "134.572796"
-  
-X104oversea_B1_1a$locationy[X104oversea_B1_1a$"僑居地" == c("德國")] <- "51.064427"
-X104oversea_B1_1a$locationx[X104oversea_B1_1a$"僑居地" == c("德國")] <- "10.492793"
-  
-X104oversea_B1_1a$locationy[X104oversea_B1_1a$"僑居地" == c("多米尼克")] <- "15.430178"
-X104oversea_B1_1a$locationx[X104oversea_B1_1a$"僑居地" == c("多米尼克")] <- "-61.360056"
-  
-X104oversea_B1_1a$locationy[X104oversea_B1_1a$"僑居地" == c("柬埔寨")] <- "12.678917"
-X104oversea_B1_1a$locationx[X104oversea_B1_1a$"僑居地" == c("柬埔寨")] <- "104.855949"
-  
-X104oversea_B1_1a$locationy[X104oversea_B1_1a$"僑居地" == c("科威特")] <- "29.323762"
-X104oversea_B1_1a$locationx[X104oversea_B1_1a$"僑居地" == c("科威特")] <- "47.414698"
-  
-X104oversea_B1_1a$locationy[X104oversea_B1_1a$"僑居地" == c("黎巴嫩")] <- "34.114424"
-X104oversea_B1_1a$locationx[X104oversea_B1_1a$"僑居地" == c("黎巴嫩")] <- "35.884993"
-  
-X104oversea_B1_1a$locationy[X104oversea_B1_1a$"僑居地" == c("寮國")] <- "19.526376"
-X104oversea_B1_1a$locationx[X104oversea_B1_1a$"僑居地" == c("寮國")] <- "102.532372"
-  
-X104oversea_B1_1a$locationy[X104oversea_B1_1a$"僑居地" == c("馬拉威")] <- "-14.020457"
-X104oversea_B1_1a$locationx[X104oversea_B1_1a$"僑居地" == c("馬拉威")] <- "33.839299"
-  
-X104oversea_B1_1a$locationy[X104oversea_B1_1a$"僑居地" == c("孟加拉")] <- "23.739765"
-X104oversea_B1_1a$locationx[X104oversea_B1_1a$"僑居地" == c("孟加拉")] <- "90.428802"
+X104oversea_B1_1a$locationy[X104oversea_B1_1a$"country" == c("美國")] <- "39.739020"
+X104oversea_B1_1a$locationx[X104oversea_B1_1a$"country" == c("美國")] <- "-101.620433"
 
-X104oversea_B1_1a$locationy[X104oversea_B1_1a$"僑居地" == c("模里西斯")] <- "-20.158133"
-X104oversea_B1_1a$locationx[X104oversea_B1_1a$"僑居地" == c("模里西斯")] <- "57.503020"
-  
-X104oversea_B1_1a$locationy[X104oversea_B1_1a$"僑居地" == c("秘魯")] <- "-10.770646"
-X104oversea_B1_1a$locationx[X104oversea_B1_1a$"僑居地" == c("秘魯")] <- "-76.089076"
-  
-X104oversea_B1_1a$locationy[X104oversea_B1_1a$"僑居地" == c("瑞典")] <- "64.496659"
-X104oversea_B1_1a$locationx[X104oversea_B1_1a$"僑居地" == c("瑞典")] <- "17.217521"
-  
-X104oversea_B1_1a$locationy[X104oversea_B1_1a$"僑居地" == c("瑞士")] <- "46.783748"
-X104oversea_B1_1a$locationx[X104oversea_B1_1a$"僑居地" == c("瑞士")] <- "7.925473"
-  
-X104oversea_B1_1a$locationy[X104oversea_B1_1a$"僑居地" == c("沙烏地阿拉伯")] <- "23.899594"
-X104oversea_B1_1a$locationx[X104oversea_B1_1a$"僑居地" == c("沙烏地阿拉伯")] <- "45.433590"
-  
-X104oversea_B1_1a$locationy[X104oversea_B1_1a$"僑居地" == c("斯里蘭卡")] <- "7.588220"
-X104oversea_B1_1a$locationx[X104oversea_B1_1a$"僑居地" == c("斯里蘭卡")] <- "80.696452"
-  
-X104oversea_B1_1a$locationy[X104oversea_B1_1a$"僑居地" == c("泰國")] <- "13.741785"
-X104oversea_B1_1a$locationx[X104oversea_B1_1a$"僑居地" == c("泰國")] <- "100.499849"
-  
-X104oversea_B1_1a$locationy[X104oversea_B1_1a$"僑居地" == c("委內瑞拉")] <- "7.073115"
-X104oversea_B1_1a$locationx[X104oversea_B1_1a$"僑居地" == c("委內瑞拉")] <- "-66.610604"
-  
-X104oversea_B1_1a$locationy[X104oversea_B1_1a$"僑居地" == c("汶萊")] <- "4.540462"
-X104oversea_B1_1a$locationx[X104oversea_B1_1a$"僑居地" == c("汶萊")] <- "114.639758"
-  
-X104oversea_B1_1a$locationy[X104oversea_B1_1a$"僑居地" == c("象牙海岸")] <- "7.643046"
-X104oversea_B1_1a$locationx[X104oversea_B1_1a$"僑居地" == c("象牙海岸")] <- "5.353685"
-  
-X104oversea_B1_1a$locationy[X104oversea_B1_1a$"僑居地" == c("匈牙利")] <- "47.012069"
-X104oversea_B1_1a$locationx[X104oversea_B1_1a$"僑居地" == c("匈牙利")] <- "19.624482"
-  
-X104oversea_B1_1a$locationy[X104oversea_B1_1a$"僑居地" == c("義大利")] <- "42.935020"
-X104oversea_B1_1a$locationx[X104oversea_B1_1a$"僑居地" == c("義大利")] <- "12.410020"
-  
-X104oversea_B1_1a$locationy[X104oversea_B1_1a$"僑居地" == c("印度")] <- "22.683064"
-X104oversea_B1_1a$locationx[X104oversea_B1_1a$"僑居地" == c("印度")] <- "79.031203"
-  
-X104oversea_B1_1a$locationy[X104oversea_B1_1a$"僑居地" == c("約旦")] <- "31.279142"
-X104oversea_B1_1a$locationx[X104oversea_B1_1a$"僑居地" == c("約旦")] <- "36.756995"
-  
-X104oversea_B1_1a$locationy[X104oversea_B1_1a$"僑居地" == c("史瓦濟蘭")] <- "-26.577159"
-X104oversea_B1_1a$locationx[X104oversea_B1_1a$"僑居地" == c("史瓦濟蘭")] <- "31.451034"
+X104oversea_B1_1a$locationy[X104oversea_B1_1a$"country" == c("阿根廷")] <- "-35.388441"
+X104oversea_B1_1a$locationx[X104oversea_B1_1a$"country" == c("阿根廷")] <- "-65.392241"
 
-X104oversea_B1_1a$locationy[X104oversea_B1_1a$"僑居地" == c("多明尼加")] <- "18.910874"
-X104oversea_B1_1a$locationx[X104oversea_B1_1a$"僑居地" == c("多明尼加")] <- "-70.193544"
+X104oversea_B1_1a$locationy[X104oversea_B1_1a$"country" == c("南韓")] <- "37.592579"
+X104oversea_B1_1a$locationx[X104oversea_B1_1a$"country" == c("南韓")] <- "126.975279"
 
-X104oversea_B1_1a$locationy[X104oversea_B1_1a$"僑居地" == c("納米比亞")] <- "-22.325959"
-X104oversea_B1_1a$locationx[X104oversea_B1_1a$"僑居地" == c("納米比亞")] <- "16.942383"
+X104oversea_B1_1a$locationy[X104oversea_B1_1a$"country" == c("紐西蘭")] <- "-41.299974"
+X104oversea_B1_1a$locationx[X104oversea_B1_1a$"country" == c("紐西蘭")] <- "174.776852"
 
-X104oversea_B1_1a$locationy[X104oversea_B1_1a$"僑居地" == c("荷蘭")] <- "52.356997"
-X104oversea_B1_1a$locationx[X104oversea_B1_1a$"僑居地" == c("荷蘭")] <- "4.894108"
+X104oversea_B1_1a$locationy[X104oversea_B1_1a$"country" == c("墨西哥")] <- "24.129376"
+X104oversea_B1_1a$locationx[X104oversea_B1_1a$"country" == c("墨西哥")] <- "-102.917429"
 
-X104oversea_B1_1a$locationy[X104oversea_B1_1a$"僑居地" == c("宏都拉斯")] <- "14.058685"
-X104oversea_B1_1a$locationx[X104oversea_B1_1a$"僑居地" == c("宏都拉斯")] <- "-87.201599"
+X104oversea_B1_1a$locationy[X104oversea_B1_1a$"country" == c("巴西")] <- "-8.884431"
+X104oversea_B1_1a$locationx[X104oversea_B1_1a$"country" == c("巴西")] <- "-55.488347"
 
-X104oversea_B1_1a$locationy[X104oversea_B1_1a$"僑居地" == c("瓜地馬拉")] <- "14.642601"
-X104oversea_B1_1a$locationx[X104oversea_B1_1a$"僑居地" == c("瓜地馬拉")] <- "-90.498682"
+X104oversea_B1_1a$locationy[X104oversea_B1_1a$"country" == c("巴拉圭")] <- "-23.269402"
+X104oversea_B1_1a$locationx[X104oversea_B1_1a$"country" == c("巴拉圭")] <- "-58.462776"
+
+X104oversea_B1_1a$locationy[X104oversea_B1_1a$"country" == c("越南")] <- "14.484540"
+X104oversea_B1_1a$locationx[X104oversea_B1_1a$"country" == c("越南")] <- "108.360975"
+
+X104oversea_B1_1a$locationy[X104oversea_B1_1a$"country" == c("肯亞")] <- "0.418065"
+X104oversea_B1_1a$locationx[X104oversea_B1_1a$"country" == c("肯亞")] <- "37.868307"
+
+X104oversea_B1_1a$locationy[X104oversea_B1_1a$"country" == c("西班牙")] <- "39.690189"
+X104oversea_B1_1a$locationx[X104oversea_B1_1a$"country" == c("西班牙")] <- "-3.132226"
+
+X104oversea_B1_1a$locationy[X104oversea_B1_1a$"country" == c("尼加拉瓜")] <- "12.891754"
+X104oversea_B1_1a$locationx[X104oversea_B1_1a$"country" == c("尼加拉瓜")] <- "-85.188938"
+
+X104oversea_B1_1a$locationy[X104oversea_B1_1a$"country" == c("巴拿馬")] <- "8.484368"
+X104oversea_B1_1a$locationx[X104oversea_B1_1a$"country" == c("巴拿馬")] <- "-80.109248"
+
+X104oversea_B1_1a$locationy[X104oversea_B1_1a$"country" == c("澳大利亞")] <- "-24.551857"
+X104oversea_B1_1a$locationx[X104oversea_B1_1a$"country" == c("澳大利亞")] <- "134.182865"
+
+X104oversea_B1_1a$locationy[X104oversea_B1_1a$"country" == c("貝里斯")] <- "16.77919"
+X104oversea_B1_1a$locationx[X104oversea_B1_1a$"country" == c("貝里斯")] <- "-88.737792"
+
+X104oversea_B1_1a$locationy[X104oversea_B1_1a$"country" == c("智利")] <- "-26.554819"
+X104oversea_B1_1a$locationx[X104oversea_B1_1a$"country" == c("智利")] <- "-70.418818"
+
+X104oversea_B1_1a$locationy[X104oversea_B1_1a$"country" == c("薩爾瓦多")] <- "13.784449"
+X104oversea_B1_1a$locationx[X104oversea_B1_1a$"country" == c("薩爾瓦多")] <- "-89.230311"
+
+X104oversea_B1_1a$locationy[X104oversea_B1_1a$"country" == c("哥斯大黎加")] <- "9.948630"
+X104oversea_B1_1a$locationx[X104oversea_B1_1a$"country" == c("哥斯大黎加")] <- "-84.117774"
+
+X104oversea_B1_1a$locationy[X104oversea_B1_1a$"country" == c("法國")] <- "46.410759"
+X104oversea_B1_1a$locationx[X104oversea_B1_1a$"country" == c("法國")] <- "2.716875"
+
+X104oversea_B1_1a$locationy[X104oversea_B1_1a$"country" == c("阿拉伯聯合大公國")] <- "23.681736"
+X104oversea_B1_1a$locationx[X104oversea_B1_1a$"country" == c("阿拉伯聯合大公國")] <- "54.002147"
+
+X104oversea_B1_1a$locationy[X104oversea_B1_1a$"country" == c("葉門")] <- "15.846800"
+X104oversea_B1_1a$locationx[X104oversea_B1_1a$"country" == c("葉門")] <- "47.850653"
+
+X104oversea_B1_1a$locationy[X104oversea_B1_1a$"country" == c("俄羅斯")] <- "62.240122"
+X104oversea_B1_1a$locationx[X104oversea_B1_1a$"country" == c("俄羅斯")] <- "93.834839"
+
+X104oversea_B1_1a$locationy[X104oversea_B1_1a$"country" == c("斐濟")] <- "-17.847725"
+X104oversea_B1_1a$locationx[X104oversea_B1_1a$"country" == c("斐濟")] <- "178.013273"
+
+X104oversea_B1_1a$locationy[X104oversea_B1_1a$"country" == c("厄瓜多")] <- "-1.418160"
+X104oversea_B1_1a$locationx[X104oversea_B1_1a$"country" == c("厄瓜多")] <- "-78.294611"
+
+X104oversea_B1_1a$locationy[X104oversea_B1_1a$"country" == c("埃及")] <- "26.528769"
+X104oversea_B1_1a$locationx[X104oversea_B1_1a$"country" == c("埃及")] <- "29.858624"
+
+X104oversea_B1_1a$locationy[X104oversea_B1_1a$"country" == c("巴布亞紐幾內亞")] <- "-6.441940"
+X104oversea_B1_1a$locationx[X104oversea_B1_1a$"country" == c("巴布亞紐幾內亞")] <- "144.595518"
+
+X104oversea_B1_1a$locationy[X104oversea_B1_1a$"country" == c("巴基斯坦")] <- "30.082631"
+X104oversea_B1_1a$locationx[X104oversea_B1_1a$"country" == c("巴基斯坦")] <- "69.294945"
+
+X104oversea_B1_1a$locationy[X104oversea_B1_1a$"country" == c("巴林")] <- "26.038782"
+X104oversea_B1_1a$locationx[X104oversea_B1_1a$"country" == c("巴林")] <- "50.552011"
+
+X104oversea_B1_1a$locationy[X104oversea_B1_1a$"country" == c("比利時")] <- "50.906237"
+X104oversea_B1_1a$locationx[X104oversea_B1_1a$"country" == c("比利時")] <- "4.338898"
+
+X104oversea_B1_1a$locationy[X104oversea_B1_1a$"country" == c("玻利維亞")] <- "-16.597679"
+X104oversea_B1_1a$locationx[X104oversea_B1_1a$"country" == c("玻利維亞")] <- "-64.640097"
+
+X104oversea_B1_1a$locationy[X104oversea_B1_1a$"country" == c("帛琉")] <- "7.517417"
+X104oversea_B1_1a$locationx[X104oversea_B1_1a$"country" == c("帛琉")] <- "134.572796"
+
+X104oversea_B1_1a$locationy[X104oversea_B1_1a$"country" == c("德國")] <- "51.064427"
+X104oversea_B1_1a$locationx[X104oversea_B1_1a$"country" == c("德國")] <- "10.492793"
+
+X104oversea_B1_1a$locationy[X104oversea_B1_1a$"country" == c("多米尼克")] <- "15.430178"
+X104oversea_B1_1a$locationx[X104oversea_B1_1a$"country" == c("多米尼克")] <- "-61.360056"
+
+X104oversea_B1_1a$locationy[X104oversea_B1_1a$"country" == c("柬埔寨")] <- "12.678917"
+X104oversea_B1_1a$locationx[X104oversea_B1_1a$"country" == c("柬埔寨")] <- "104.855949"
+
+X104oversea_B1_1a$locationy[X104oversea_B1_1a$"country" == c("科威特")] <- "29.323762"
+X104oversea_B1_1a$locationx[X104oversea_B1_1a$"country" == c("科威特")] <- "47.414698"
+
+X104oversea_B1_1a$locationy[X104oversea_B1_1a$"country" == c("黎巴嫩")] <- "34.114424"
+X104oversea_B1_1a$locationx[X104oversea_B1_1a$"country" == c("黎巴嫩")] <- "35.884993"
+
+X104oversea_B1_1a$locationy[X104oversea_B1_1a$"country" == c("寮國")] <- "19.526376"
+X104oversea_B1_1a$locationx[X104oversea_B1_1a$"country" == c("寮國")] <- "102.532372"
+
+X104oversea_B1_1a$locationy[X104oversea_B1_1a$"country" == c("馬拉威")] <- "-14.020457"
+X104oversea_B1_1a$locationx[X104oversea_B1_1a$"country" == c("馬拉威")] <- "33.839299"
+
+X104oversea_B1_1a$locationy[X104oversea_B1_1a$"country" == c("孟加拉")] <- "23.739765"
+X104oversea_B1_1a$locationx[X104oversea_B1_1a$"country" == c("孟加拉")] <- "90.428802"
+
+X104oversea_B1_1a$locationy[X104oversea_B1_1a$"country" == c("模里西斯")] <- "-20.158133"
+X104oversea_B1_1a$locationx[X104oversea_B1_1a$"country" == c("模里西斯")] <- "57.503020"
+
+X104oversea_B1_1a$locationy[X104oversea_B1_1a$"country" == c("秘魯")] <- "-10.770646"
+X104oversea_B1_1a$locationx[X104oversea_B1_1a$"country" == c("秘魯")] <- "-76.089076"
+
+X104oversea_B1_1a$locationy[X104oversea_B1_1a$"country" == c("瑞典")] <- "64.496659"
+X104oversea_B1_1a$locationx[X104oversea_B1_1a$"country" == c("瑞典")] <- "17.217521"
+
+X104oversea_B1_1a$locationy[X104oversea_B1_1a$"country" == c("瑞士")] <- "46.783748"
+X104oversea_B1_1a$locationx[X104oversea_B1_1a$"country" == c("瑞士")] <- "7.925473"
+
+X104oversea_B1_1a$locationy[X104oversea_B1_1a$"country" == c("沙烏地阿拉伯")] <- "23.899594"
+X104oversea_B1_1a$locationx[X104oversea_B1_1a$"country" == c("沙烏地阿拉伯")] <- "45.433590"
+
+X104oversea_B1_1a$locationy[X104oversea_B1_1a$"country" == c("斯里蘭卡")] <- "7.588220"
+X104oversea_B1_1a$locationx[X104oversea_B1_1a$"country" == c("斯里蘭卡")] <- "80.696452"
+
+X104oversea_B1_1a$locationy[X104oversea_B1_1a$"country" == c("泰國")] <- "13.741785"
+X104oversea_B1_1a$locationx[X104oversea_B1_1a$"country" == c("泰國")] <- "100.499849"
+
+X104oversea_B1_1a$locationy[X104oversea_B1_1a$"country" == c("委內瑞拉")] <- "7.073115"
+X104oversea_B1_1a$locationx[X104oversea_B1_1a$"country" == c("委內瑞拉")] <- "-66.610604"
+
+X104oversea_B1_1a$locationy[X104oversea_B1_1a$"country" == c("汶萊")] <- "4.540462"
+X104oversea_B1_1a$locationx[X104oversea_B1_1a$"country" == c("汶萊")] <- "114.639758"
+
+X104oversea_B1_1a$locationy[X104oversea_B1_1a$"country" == c("象牙海岸")] <- "7.643046"
+X104oversea_B1_1a$locationx[X104oversea_B1_1a$"country" == c("象牙海岸")] <- "5.353685"
+
+X104oversea_B1_1a$locationy[X104oversea_B1_1a$"country" == c("匈牙利")] <- "47.012069"
+X104oversea_B1_1a$locationx[X104oversea_B1_1a$"country" == c("匈牙利")] <- "19.624482"
+
+X104oversea_B1_1a$locationy[X104oversea_B1_1a$"country" == c("義大利")] <- "42.935020"
+X104oversea_B1_1a$locationx[X104oversea_B1_1a$"country" == c("義大利")] <- "12.410020"
+
+X104oversea_B1_1a$locationy[X104oversea_B1_1a$"country" == c("印度")] <- "22.683064"
+X104oversea_B1_1a$locationx[X104oversea_B1_1a$"country" == c("印度")] <- "79.031203"
+
+X104oversea_B1_1a$locationy[X104oversea_B1_1a$"country" == c("約旦")] <- "31.279142"
+X104oversea_B1_1a$locationx[X104oversea_B1_1a$"country" == c("約旦")] <- "36.756995"
+
+X104oversea_B1_1a$locationy[X104oversea_B1_1a$"country" == c("史瓦濟蘭")] <- "-26.577159"
+X104oversea_B1_1a$locationx[X104oversea_B1_1a$"country" == c("史瓦濟蘭")] <- "31.451034"
+
+X104oversea_B1_1a$locationy[X104oversea_B1_1a$"country" == c("多明尼加")] <- "18.910874"
+X104oversea_B1_1a$locationx[X104oversea_B1_1a$"country" == c("多明尼加")] <- "-70.193544"
+
+X104oversea_B1_1a$locationy[X104oversea_B1_1a$"country" == c("納米比亞")] <- "-22.325959"
+X104oversea_B1_1a$locationx[X104oversea_B1_1a$"country" == c("納米比亞")] <- "16.942383"
+
+X104oversea_B1_1a$locationy[X104oversea_B1_1a$"country" == c("荷蘭")] <- "52.356997"
+X104oversea_B1_1a$locationx[X104oversea_B1_1a$"country" == c("荷蘭")] <- "4.894108"
+
+X104oversea_B1_1a$locationy[X104oversea_B1_1a$"country" == c("宏都拉斯")] <- "14.058685"
+X104oversea_B1_1a$locationx[X104oversea_B1_1a$"country" == c("宏都拉斯")] <- "-87.201599"
+
+X104oversea_B1_1a$locationy[X104oversea_B1_1a$"country" == c("瓜地馬拉")] <- "14.642601"
+X104oversea_B1_1a$locationx[X104oversea_B1_1a$"country" == c("瓜地馬拉")] <- "-90.498682"
 
 X104oversea_B1_1a$studentcount <- as.numeric(X104oversea_B1_1a$"在學學生人數_男") + as.numeric(X104oversea_B1_1a$"在學學生人數_女")
 
 #X104oversea_B1_1a清洗2
-X104oversea_B1_1a$type[X104oversea_B1_1a$"僑居地" %in% c("菲律賓","汶萊","泰國","孟加拉","斯里蘭卡","沙烏地阿拉伯","馬來西亞","緬甸","印尼","日本","新加坡","南韓","越南","阿拉伯聯合大公國","寮國","柬埔寨","巴基斯坦","巴林","印度","黎巴嫩","約旦","葉門","科威特")] <- "亞洲"
+X104oversea_B1_1a$type[X104oversea_B1_1a$"country" %in% c("菲律賓","汶萊","泰國","孟加拉","斯里蘭卡","沙烏地阿拉伯","馬來西亞","緬甸","印尼","日本","新加坡","南韓","越南","阿拉伯聯合大公國","寮國","柬埔寨","巴基斯坦","巴林","印度","黎巴嫩","約旦","葉門","科威特")] <- "亞洲"
 
-X104oversea_B1_1a$type[X104oversea_B1_1a$"僑居地" %in% c("美國","加拿大","墨西哥","古巴","多明尼加","多米尼克","薩爾瓦多","尼加拉瓜","瓜地馬拉","貝里斯","巴拿馬","哥斯大黎加")] <- "北美洲"
+X104oversea_B1_1a$type[X104oversea_B1_1a$"country" %in% c("美國","加拿大","墨西哥","古巴","多明尼加","多米尼克","薩爾瓦多","尼加拉瓜","瓜地馬拉","貝里斯","巴拿馬","哥斯大黎加")] <- "北美洲"
 
-X104oversea_B1_1a$type[X104oversea_B1_1a$"僑居地" %in% c("厄瓜多","巴西","烏拉圭","巴拉圭","秘魯","智利","阿根廷","玻利維亞","哥倫比亞","委內瑞拉","宏都拉斯")] <- "南美洲"
+X104oversea_B1_1a$type[X104oversea_B1_1a$"country" %in% c("厄瓜多","巴西","烏拉圭","巴拉圭","秘魯","智利","阿根廷","玻利維亞","哥倫比亞","委內瑞拉","宏都拉斯")] <- "南美洲"
 
-X104oversea_B1_1a$type[X104oversea_B1_1a$"僑居地" %in% c("荷蘭","英國","西班牙","比利時","俄羅斯","德國","匈牙利","瑞典","法國","義大利","瑞士")] <- "歐洲"
+X104oversea_B1_1a$type[X104oversea_B1_1a$"country" %in% c("荷蘭","英國","西班牙","比利時","俄羅斯","德國","匈牙利","瑞典","法國","義大利","瑞士")] <- "歐洲"
 
-X104oversea_B1_1a$type[X104oversea_B1_1a$"僑居地" %in% c("埃及","肯亞","南非","象牙海岸","納米比亞","馬拉威","馬拉威","模里西斯","史瓦濟蘭")] <- "非洲"
+X104oversea_B1_1a$type[X104oversea_B1_1a$"country" %in% c("埃及","肯亞","南非","象牙海岸","納米比亞","馬拉威","馬拉威","模里西斯","史瓦濟蘭")] <- "非洲"
 
-X104oversea_B1_1a$type[X104oversea_B1_1a$"僑居地" %in% c("澳大利亞","帛琉","斐濟","巴布亞紐幾內亞","紐西蘭","薩摩亞")] <- "大洋洲"
+X104oversea_B1_1a$type[X104oversea_B1_1a$"country" %in% c("澳大利亞","帛琉","斐濟","巴布亞紐幾內亞","紐西蘭","薩摩亞")] <- "大洋洲"
 
 asiadata<-X104oversea_B1_1a[grepl("亞洲",X104oversea_B1_1a$"type"),]
 eurodata<-X104oversea_B1_1a[grepl("歐洲",X104oversea_B1_1a$"type"),]
@@ -306,34 +314,94 @@ Oceaniadata<-X104oversea_B1_1a[grepl("大洋洲",X104oversea_B1_1a$"type"),]
 NAdata<-X104oversea_B1_1a[grepl("北美洲",X104oversea_B1_1a$"type"),]
 SAdata<-X104oversea_B1_1a[grepl("南美洲",X104oversea_B1_1a$"type"),]
 
+#各國僑生在學人數
+library(dplyr)
+overseastudentcountanalyze = summarise(group_by(X104oversea_B1_1a,country), "人數" = sum(studentcount) ) 
+##僑居地前十名及人數
+knitr::kable(
+head(overseastudentcountanalyze[order(overseastudentcountanalyze$"人數",decreasing = T),],10))
+
 #各級學校僑生現況
 presentofoversea<-head(File_1940[order(File_1940$"學年度",decreasing = T),],10)
+knitr::kable(presentofoversea)
+
+#僑生入讀台灣大專學校情況
+schoolcountanalyze =  summarise(group_by(X104oversea_B1_1a,school), "人數" = sum(studentcount)) 
+
+##最多僑生入讀的大專學校
+knitr::kable(
+head(schoolcountanalyze[order(schoolcountanalyze$"人數",decreasing = T),],10))
 
 #國立大學僑生現況
-presentofnational<-Student_RPT_05[grepl("公立",Student_RPT_05$"設立別"),]
+presentofnational<-Student_RPT_05[grepl("公立",Student_RPT_05$"typeofschool"),]
+presentofnationaltop <-  summarise(group_by(presentofnational,schoolname), "人數" = sum(as.numeric(overseastudentcount)))
+knitr::kable(
+  head(presentofnationaltop[order(presentofnationaltop$"人數",decreasing = T),],10)
+)
 
 #私立大學僑生現況
-presentofprivate<-Student_RPT_05[grepl("私立",Student_RPT_05$"設立別"),]
+presentofprivate<-Student_RPT_05[grepl("私立",Student_RPT_05$"typeofschool"),]
+presentofprivatetop <-  summarise(group_by(presentofprivate,schoolname), "人數" = sum(as.numeric(overseastudentcount)))
+knitr::kable(
+  head(presentofprivatetop[order(presentofprivatetop$"人數",decreasing = T),],10)
+)
+
+###最多僑生入讀的科系
+majorcountanalyze =  summarise(group_by(Student_RPT_05,Major), "僑生人數" = sum(as.numeric(overseastudentcount)), "港澳生人數" = sum(as.numeric(HKMacaustudentcount)))
+osmajorresult <- data.frame(majorcountanalyze$Major,majorcountanalyze$"僑生人數")
+knitr::kable(
+  head(osmajorresult[order(majorcountanalyze$"僑生人數",decreasing = T),],10)
+)
+
+###最多港澳生入讀的科系
+hkmmajorresult <- data.frame(majorcountanalyze$Major,majorcountanalyze$"港澳生人數")
+knitr::kable(
+  head(hkmmajorresult[order(majorcountanalyze$"港澳生人數",decreasing = T),],10)
+)
+
 
 #長庚大學僑生現況
-test105<-Student_RPT_05[grepl("105",Student_RPT_05$"學年度"),]
-testcgu<-test105[grepl("長庚大學",test105$"學校名稱"),]
-
+test105<-Student_RPT_05[grepl("105",Student_RPT_05$"year"),]
+testcgu<-test105[grepl("長庚大學",test105$"schoolname"),]
+names(testcgu)[1] <-"學年"
+names(testcgu)[2] <-"設立別"
+names(testcgu)[3] <-"學校類別"
+names(testcgu)[4] <-"學校代碼"
+names(testcgu)[5] <-"學校名稱"
+names(testcgu)[6] <-"系所代碼"
+names(testcgu)[7] <-"系所"
+names(testcgu)[8] <-"學制"
+names(testcgu)[9] <-"僑生人數"
+names(testcgu)[10] <-"僑生_男"
+names(testcgu)[11] <-"僑生_女"
+names(testcgu)[12] <-"港澳生人數"
+names(testcgu)[13] <-"港澳生_男"
+names(testcgu)[14] <-"港澳生_女"
 knitr::kable(
-  head(presentofoversea)
+  head(testcgu)
 )
 
+##長庚大學資管系僑生現況
+cguimosstudent<-testcgu[grepl("資訊管理學系",testcgu$"系所"),]
+names(cguimosstudent)[1] <-"學年"
+names(cguimosstudent)[2] <-"設立別"
+names(cguimosstudent)[3] <-"學校類別"
+names(cguimosstudent)[4] <-"學校代碼"
+names(cguimosstudent)[5] <-"學校名稱"
+names(cguimosstudent)[6] <-"系所代碼"
+names(cguimosstudent)[7] <-"系所"
+names(cguimosstudent)[8] <-"學制"
+names(cguimosstudent)[9] <-"僑生人數"
+names(cguimosstudent)[10] <-"僑生_男"
+names(cguimosstudent)[11] <-"僑生_女"
+names(cguimosstudent)[12] <-"港澳生人數"
+names(cguimosstudent)[13] <-"港澳生_男"
+names(cguimosstudent)[14] <-"港澳生_女"
 knitr::kable(
-  head(presentofnational)
+  head(cguimosstudent)
 )
 
-knitr::kable(
-  head(presentofprivate)
-)
 
-knitr::kable(
-  head(testcgu[order(testcgu$"學制",decreasing = T),],)
-)
 ```
 
 
@@ -344,13 +412,11 @@ knitr::kable(
 library(ggplot2)
 library(choroplethr)
 library(ggmap)
-worldmap <- get_map(location = c(-47.52,-16.99,76.88,-33.37), zoom = 1,language = "zh-TW")
-ggmap(worldmap)
 
 AsiaMap <- get_map(location = "Asia", zoom = 3, maptype = 'satellite',language = "zh-TW")
 AsiaMapO <- ggmap(AsiaMap)+ geom_point(data=asiadata, 
                aes(x=as.numeric(locationx), y=as.numeric(locationy),
-                   color=as.numeric(在學學生人數_男),size=3.5))+ 
+                   color=as.numeric(studentcount),size=3.5))+ 
     scale_color_continuous(
         low = "yellow",high = "red")+ 
     guides(size=FALSE)
@@ -377,7 +443,7 @@ OceaniaMapO
 AfricaMap <- get_map(location = "Africa", zoom = 3, maptype = 'satellite')
 AfricaMapO <- ggmap(AfricaMap)+ geom_point(data=SAfricadata, 
                aes(x=as.numeric(locationx), y=as.numeric(locationy),
-                   color=as.numeric("在學學生人數_男"),size=3.5))+ 
+                   color=as.numeric(studentcount),size=3.5))+ 
     scale_color_continuous(
         low = "yellow",high = "red")+ 
     guides(size=FALSE)
@@ -386,7 +452,7 @@ AfricaMapO
 NAMap <- get_map(location = "North America", zoom = 3, maptype = 'satellite')
 NAMapO <- ggmap(NAMap)+ geom_point(data=NAdata, 
                aes(x=as.numeric(locationx), y=as.numeric(locationy),
-                   color=as.numeric("在學學生人數_男"),size=3.5))+ 
+                   color=as.numeric(studentcount),size=3.5))+ 
     scale_color_continuous(
         low = "yellow",high = "red")+ 
     guides(size=FALSE)
@@ -395,7 +461,7 @@ NAMapO
 SAMap <- get_map(location = "South America", zoom = 3, maptype = 'satellite')
 SAMapO <- ggmap(SAMap)+ geom_point(data=SAdata, 
                aes(x=as.numeric(locationx), y=as.numeric(locationy),
-                   color=as.numeric("在學學生人數_男"),size=3.5))+ 
+                   color=as.numeric(studentcount),size=3.5))+ 
     scale_color_continuous(
         low = "yellow",high = "red")+ 
     guides(size=FALSE)
