--- a/README.Rmd
+++ b/README.Rmd
@@ -24,6 +24,10 @@ Student_RPT_05是現時台灣各大專院校外藉學生資料包括人數國藉
 ```{r}
 #這是R Code Chunk
 library(readr)
+library(dplyr)
+library(ggplot2)
+library(choroplethr)
+library(ggmap)
 File_1940 <- read_csv("C:/CGUIM_BigData_FinalReport-B0344122/File_1940.csv", skip = 3)
 
 visitorstatictis1 <- read_csv("C:/CGUIM_BigData_FinalReport-B0344122/visitorstatictis1.csv")
@@ -31,11 +35,9 @@ visitorstatictis1 <- read_csv("C:/CGUIM_BigData_FinalReport-B0344122/visitorstat
 Student_RPT_05 <- read_csv("C:/CGUIM_BigData_FinalReport-B0344122/Student_RPT_05.csv")
 
 X104oversea_B1_1a <- read_csv("C:/CGUIM_BigData_FinalReport-B0344122/104oversea_B1-1a.csv")
-```
-
 
 ## 資料處理與清洗
-```{r}
+
 #資料清洗
 
 #File_1940清洗
@@ -49,7 +51,7 @@ File_1940 <- File_1940[-1,]
 visitorstatictis1 <- visitorstatictis1[-1,]
 visitorstatictis1 <- visitorstatictis1[-1,]
 names(visitorstatictis1)[1] <-"year"
-names(visitorstatictis1)[2] <-"總計人數"
+names(visitorstatictis1)[2] <-"pop"
 names(visitorstatictis1)[3] <-"成長率"
 names(visitorstatictis1)[4] <-"指數"
 names(visitorstatictis1)[5] <-"外籍旅客人數"
@@ -79,11 +81,11 @@ names(Student_RPT_05)[12] <-"HKMacaustudentcount"
 names(Student_RPT_05)[13] <-"HKMacauMstudentcount"
 names(Student_RPT_05)[14] <-"HKMacauFstudentcount"
 
-student101data<-Student_RPT_05[grepl("101",Student_RPT_05$"學年度"),]
-student102data<-Student_RPT_05[grepl("102",Student_RPT_05$"學年度"),]
-student103data<-Student_RPT_05[grepl("103",Student_RPT_05$"學年度"),]
-student104data<-Student_RPT_05[grepl("104",Student_RPT_05$"學年度"),]
-student105data<-Student_RPT_05[grepl("105",Student_RPT_05$"學年度"),]
+student101data<-Student_RPT_05[grepl("101",Student_RPT_05$"year"),]
+student102data<-Student_RPT_05[grepl("102",Student_RPT_05$"year"),]
+student103data<-Student_RPT_05[grepl("103",Student_RPT_05$"year"),]
+student104data<-Student_RPT_05[grepl("104",Student_RPT_05$"year"),]
+student105data<-Student_RPT_05[grepl("105",Student_RPT_05$"year"),]
 
 #X104oversea_B1_1a清洗
 names(X104oversea_B1_1a)[2] <-"school"
@@ -314,23 +316,84 @@ Oceaniadata<-X104oversea_B1_1a[grepl("大洋洲",X104oversea_B1_1a$"type"),]
 NAdata<-X104oversea_B1_1a[grepl("北美洲",X104oversea_B1_1a$"type"),]
 SAdata<-X104oversea_B1_1a[grepl("南美洲",X104oversea_B1_1a$"type"),]
 
+X104oversea_B1_1a$"僑居地"<- X104oversea_B1_1a$country
+
+
+## 資料探索
+
 #各國僑生在學人數
-library(dplyr)
-overseastudentcountanalyze = summarise(group_by(X104oversea_B1_1a,country), "人數" = sum(studentcount) ) 
+overseastudentcountanalyze <- summarise(group_by(X104oversea_B1_1a,country),count = sum(studentcount)) 
+
 ##僑居地前十名及人數
+overseastudentcountresult <- head(overseastudentcountanalyze[order(overseastudentcountanalyze$count,decreasing = T),],10)
 knitr::kable(
-head(overseastudentcountanalyze[order(overseastudentcountanalyze$"人數",decreasing = T),],10))
+overseastudentcountresult
+)
+
+knitr::kable(
+qplot(x=country,                               
+      y=count,                              
+      data=head(overseastudentcountanalyze[order(overseastudentcountanalyze$count,decreasing = T),],10),                    geom="point",                         
+      main = "僑居地前十名及人數",  
+      xlab="僑居地",                          
+      ylab="人數",
+      color = country
+      )
+)
 
 #各級學校僑生現況
 presentofoversea<-head(File_1940[order(File_1940$"學年度",decreasing = T),],10)
-knitr::kable(presentofoversea)
+presentofoversea104 <- presentofoversea[grepl("104",presentofoversea$"學年度"),]
+presentofoversea104$"學年度" <- NULL
+presentofoversea104$"總計" <- NULL
+presentofoversea104$"計" <- NULL
+presentofoversea104L<-stack(presentofoversea104) 
+presentofoversea104chart <- ggplot(data=presentofoversea104L) +
+geom_bar(aes(x=factor(1),
+                 y=as.numeric(values),
+                 fill=ind),
+             stat = "identity"
+             ) + coord_polar("y", start=0)
+
+knitr::kable(presentofoversea104chart)
+
+presentofoversea104L$"比例(%)" <- (as.numeric(presentofoversea104L$values)/sum(as.numeric(presentofoversea104L$values)))*100
+names(presentofoversea104L)[1] <-"學校類型"
+names(presentofoversea104L)[2] <-"總計人數"
+os104summary <- data.frame(presentofoversea104L)
+knitr::kable(os104summary)
 
 #僑生入讀台灣大專學校情況
 schoolcountanalyze =  summarise(group_by(X104oversea_B1_1a,school), "人數" = sum(studentcount)) 
 
+#僑生入讀台灣大專學校率
+student101rate <- sum(as.numeric(student101data$overseastudentcount))
+student102rate <- sum(as.numeric(student102data$overseastudentcount))
+student103rate <- sum(as.numeric(student103data$overseastudentcount))
+student104rate <- sum(as.numeric(student104data$overseastudentcount))
+student105rate <- sum(as.numeric(student105data$overseastudentcount))
+osstudent101to105rate <- c(student101rate,student102rate,student103rate,student104rate,student105rate)
+statyear <- c("101","102","103","104","105")
+overseastudentrate <- data.frame(statyear,osstudent101to105rate)
+knitr::kable(
+ggplot(overseastudentrate, aes(x=statyear, y=osstudent101to105rate, group = 1)) + geom_line()
+)
+
+#旅客來台旅遊率
+visitor101to105rate <- visitorstatictis1
+for (i in 1:56){
+  visitor101to105rate <- visitor101to105rate[-1,]
+}
+ROCYear <- c("101","102","103","104")
+visitor101to105rate$ROCYear <- ROCYear
+knitr::kable(
+ggplot(visitor101to105rate, aes(x=ROCYear, y=pop, group = 1)) + geom_line()
+)
+
 ##最多僑生入讀的大專學校
 knitr::kable(
-head(schoolcountanalyze[order(schoolcountanalyze$"人數",decreasing = T),],10))
+head(schoolcountanalyze[order(schoolcountanalyze$"人數",decreasing = T),],10)
+)
 
 #國立大學僑生現況
 presentofnational<-Student_RPT_05[grepl("公立",Student_RPT_05$"typeofschool"),]
@@ -405,8 +468,7 @@ knitr::kable(
 ```
 
 
-## 探索式資料分析
-圖文並茂圖文並茂
+## 資料分析
 ```{r}
 #這是R Code Chunk
 library(ggplot2)
